--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
 	"devDependencies": {
+		"@babel/core": "^7.4.5",
+		"@babel/preset-env": "^7.4.5",
+		"babel-loader": "^8.0.6",
 		"gulp": "3.9.1",
+		"liferay-theme-deps-7.1": "8.0.9",
 		"liferay-theme-tasks": "8.0.9",
-		"liferay-theme-deps-7.1": "8.0.9"
+		"webpack": "^4.35.0",
+		"webpack-cli": "^3.3.5"
 	},
 	"keywords": [
 		"liferay-theme"
@@ -12,6 +17,10 @@
 		"screenshot": "",
 		"templateLanguage": "ftl",
 		"version": "7.1"
+	},
+	"scripts": {
+		"dev-webpack": "webpack --mode development",
+		"build-webpack": "webpack --mode production"
 	},
 	"main": "package.json",
 	"name": "gs-base-theme",
