--- a/package.json
+++ b/package.json
@@ -1,28 +1,43 @@
 {
-	"devDependencies": {
-		"@babel/core": "^7.4.5",
-		"@babel/preset-env": "^7.4.5",
-		"babel-loader": "^8.0.6",
-		"gulp": "^4.0.2",
-		"liferay-theme-deps-7.1": "8.0.9",
-		"liferay-theme-tasks": "^9.5.0",
-		"webpack": "^4.35.0",
-		"webpack-cli": "^3.3.5"
-	},
+	"name": "gs-base-theme",
+	"version": "1.0.0",
+	"main": "package.json",
 	"keywords": [
 		"liferay-theme"
 	],
 	"liferayTheme": {
 		"baseTheme": "styled",
+		"fontAwesome": true,
 		"screenshot": "",
 		"templateLanguage": "ftl",
-		"version": "7.1"
+		"version": "7.2"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.10.3",
+		"@babel/preset-env": "^7.10.3",
+		"babel-loader": "^8.1.0",
+		"compass-mixins": "0.12.10",
+		"del": "^5.1.0",
+		"gulp": "3.9.1",
+		"gulp-babel": "^8.0.0-beta.2",
+		"gulp-concat": "^2.6.1",
+		"gulp-string-replace": "^1.1.2",
+		"liferay-font-awesome": "3.4.0",
+		"liferay-frontend-common-css": "1.0.4",
+		"liferay-frontend-theme-styled": "4.0.21",
+		"liferay-frontend-theme-unstyled": "4.0.17",
+		"liferay-theme-tasks": "^9.5.1",
+		"webpack": "^4.43.0",
+		"webpack-stream": "^5.2.1"
 	},
 	"scripts": {
-		"dev-webpack": "webpack --mode development",
-		"build-webpack": "webpack --mode production"
-	},
-	"main": "package.json",
-	"name": "gs-base-theme",
-	"version": "1.0.0"
+		"init": "gulp init",
+		"build": "gulp build",
+		"deploy": "gulp deploy",
+		"extend": "gulp extend",
+		"kickstart": "gulp kickstart",
+		"status": "gulp status",
+		"upgrade": "gulp upgrade",
+		"watch": "gulp watch"
+	}
 }
