--- a/src/WEB-INF/liferay-plugin-package.properties
+++ b/src/WEB-INF/liferay-plugin-package.properties
@@ -6,8 +6,8 @@ short-description=
 long-description=
 change-log=
 page-url=http://www.liferay.com
-author=Liferay, Inc.
+author=Liferay Latam
 licenses=LGPL
-liferay-versions=7.1.0+
+liferay-versions=7.3.0+
 
 resources-importer-developer-mode-enabled=true
